--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,146 @@
 html {
     box-sizing: border-box
-   }
-   /* The Universal Selector */
-   *, /* All elements*/
-   *::before, /* All ::before pseudo-elements */
-   *::after { /* All ::after pseudo-elements */
+  }
+  
+  /* The Universal Selector */
+  *, /* All elements*/
+  *::before, /* All ::before pseudo-elements */
+  *::after { /* All ::after pseudo-elements */
     /* height & width will now include border & padding by default
        but can be over-ridden as needed */
     box-sizing: inherit;
-   }
-   /* resets font size to be 62.5% of the user preference - 
+  }
+  
+  /* resets font size to be 62.5% of the user preference - 
      in most browser configurations this will be 10px */
-   :root {
+  :root {
     font-size: 62.5%
-   }
-   body {
-    background-color: #39a0a9;
-   /* Use a system font, if none are available use an available sans-sarif   font */
+  }
+  
+  body {
+    background-color: gray;
+  /* Use a system font, if none are available use an available sans-sarif   font */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     margin: 0;
-    display: grid;
-    height: 100vh;
-    font-size: 2rem;
-    grid-template-rows: [row1-start] 2fr [row1-end] 1fr [thirdline] 2fr  [last-line];
-    grid-template-columns: [first] 2fr [line1] 1fr [line2] 2fr [end];
-   }
-   .status {
-       text-align: right;
-   }
-    header {
-       text-align: center;
-       justify-content: center;
-   }
-   .stars {
-       text-align: center;
-   }
-   .buttons {
-       text-align: center;
-   }
-   .container {
-       background-color: white;
-    grid-column-start: line1;
-    grid-column-end: line2;
-    grid-row-start: row1-end;
-    grid-row-end: thirdline;
+    display: flex;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
   }
-  @media (min-width: 724 px){
-      
+
+  main{
+      width: 300px;
+      background-color: whitesmoke;
+      text-align: center;
+      font-size: 2rem;
+      border: black 2px solid;
   }
+
+  #status {
+      text-align: right;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: gray;
+      padding: 10px 20px 0 0;
+  }
+  
+img {
+    border-radius: 50%;
+    border: green 4px solid;
+    
+}
+
+h1, p {
+    margin: 0;
+}
+
+h1 {
+    font-size: 3.2rem;
+    padding: 8px 0;
+}
+
+#occupation {
+    background-color: lightgray;
+    padding: 16px 0;
+}
+
+#brand {
+    display: none;
+}
+
+#offer {
+    padding: 16px 0;
+}
+
+#contact {
+    display: flex;
+    
+}
+
+#contact > p:first-child {
+    background-color: darkgray;
+}
+
+#contact > p:last-child {
+    background-color: rgb(78, 76, 76);
+}
+
+#contact > p {
+    width: 50%;
+    height: 60px;
+    font-size: larger;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border-top: 2px solid black;
+    border-right: 2px solid black;
+}
+
+@media only screen and (min-width: 470px) {
+    main{
+        display: grid;
+        text-align: left;
+        width: 550px;
+        grid-template-columns: 40% 60%;
+        grid-template-rows: auto auto auto auto;
+        grid-template-areas: 
+        "status name"
+        "img occupation"
+        "img brand"
+        "contact offer";
+    }
+
+
+    #status {
+        text-align: left;
+        padding: 10px 0 0 20px;
+    }
+
+    img {
+        grid-area: img;
+        margin: 0 auto;
+    }
+
+    #name, #occupation, #brand, #offer {
+        padding-left: 20px;
+    }
+
+    #brand > p {
+        border-left: darkgrey 4px solid;
+        padding: 0 20px 0 8px;
+        font-size: 1.6rem;
+        margin-top: 10px;
+    }
+
+    #brand {
+        display: inline;
+    }
+
+    #contact {
+        grid-area: contact;
+        align-items: flex-end;
+    }
+
+}
+
